{
  "error": "Error: {err}",
  "l_mode": "Light theme",
  "d_mode": "Dark theme",
  "logout": "Logout",
  "none": "None",
  "accept_btn": "Accept",
  "cancel_btn": "Cancel",

  "state_playing": "Playing",
  "state_completed": "Completed",
  "state_hold": "On hold",
  "state_dropped": "Dropped",
  "state_plan": "Plan to play",

  "app_home": "Home",
  "app_search": "Search",
  "app_stats": "Statistics",
  "app_profile": "Profile",

  "login_title": "Login",
  "login_name_field": "Enter your name",
  "login_name_error": "Enter a name",
  "login_pass_field": "Enter your password",
  "login_pass_error": "Your password must be at least {minChars} characters long",
  "login_btn_reg": "Register",
  "login_btn_login": "Login",

  "stats_options": "Options:",
  "stats_updates": "Last updates:",
  "stats_stats": "Statistics:",
  "stats_total": "Total",
  "stats_t_time": "Total time",
  "stats_avg_score": "Average score",

  "search_bar": "Search a game by its name",

  "home_all": "ALL",

  "details_del_title": "Delete game from collection?",
  "details_del_content": "This action cannot be undone, you will lose your saved game data",
  "details_add_btn": "Add to collection",
  "details_tab_desc": "Description",
  "details_tab_detail": "Details",
  "details_tab_reles": "Releases",
  "details_tab_edit": "Edit",
  "details_del_snckbar": "Game deleted from collection",

  "log_prv_no_user": "The user {name} doesn't exists",
  "log_prv_wrg_pass": "Wrong password",
  "log_prv_user_exst": "The user {name} is already registered",
  "log_prv_err_user": "The user could not be created",

  "game_wid_dev": "Dev: ",
  "game_wid_pub": "Pub: ",
  "game_wid_l_upd": "Last update: ",

  "game_form_score": "Score:",
  "game_form_state": "State:",
  "game_form_time": "Time played:",
  "game_form_time_suf": "h",
  "game_form_none": "Not selected"
}