...
              // Si la app es compacta y la searchBar tiene el foco no se muestra
              // el selector para que la esta ocupe toda la pantalla
              if (!(focusNode.hasFocus && isCompact)) Card(
                elevation: 5,
                // Selector para las distintas categorías
                child: DropdownButton<GameStates?>(
                  key: Key("dropdown"),
                  padding: EdgeInsets.symmetric(horizontal: 10),
                  value: selectedState,
                  items: GameStates.values.map((GameStates gameState) {
                    return DropdownMenuItem<GameStates>(
                      value: gameState,
                      child: Text(gameState.localize(context).toUpperCase())
                    );
                  }).followedBy([DropdownMenuItem<GameStates>(
                    key: Key("all_games"),
                    value: null,
                    child: Text(loc.home_all)
                  )]).toList(),
                  onChanged: (GameStates? gameState) {
                    ref.read(stateProvider.notifier).state = gameState;
                  }
...
