...
                        Flexible(
                          flex: 7,
                          // Botón para registrar un userGame si no existe
                          // o formulario para el juego
                          child: userGame == null
                            ? ElevatedButton(
                                key: Key("add_btn"),
                                onPressed: () {
                                  ref.read(userGamesProvider.notifier).insertUserGame(game.idGame);
                                },
                                child: Text(loc.details_add_btn)
                              )
                            : GameFormWidget(
...
